Update post image caption

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -79,7 +79,7 @@ layout: default
                 <div>
                 {% endif %}
                     <img width="100%" height="auto" src="{{ site.image_source }}/post/{{ page.image.source }}" />
-                    <p class="attribution">image by {{ page.image.attribution }}&nbsp;</p>
+                    <p class="attribution">Image by {{ page.image.attribution }}&nbsp;</p>
                 </div>
             </div>
             {% endunless %}
