--- a/_sass/layout_post.scss
+++ b/_sass/layout_post.scss
@@ -164,24 +164,22 @@ section.post_column_main {
             @include max-screen(480px) {
                 margin-bottom: 10px;
             }
-            padding: 0 0 0 10px;
+            padding: 0 0 2px 10px;
             border-left: 2px solid $color_link;
             
             display: block;
             
             &,
             & > a {
-                @include set_font($font_page_text, $font_size_page_text + 2, $color_page_text);
-                line-height: $font_line_height_page_text + 5;
+                @include set_font($font_page_text, $font_size_page_text - 3, $color_page_text);
+                line-height: $font_line_height_page_text - 8;
                 @include max-screen(720px) {
-                    @include set_font($font_page_text, $font_size_page_text + 2, $color_page_text);
-                    line-height: $font_line_height_page_text + 3;
+                    line-height: $font_line_height_page_text - 10;
                 }
                 @media print {
                     @include set_font($font_page_text, $font_size_page_text + 3, $color_page_text);
                     line-height: $font_size_page_text + 6;
                 }
-                font-weight: bold;
             }
             
             & > a {
