--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,4 +15,76 @@
     </p>
 </header>
     
-{% include links_navigation.html %}
+<div id="nav_top">
+    <ul>
+
+        <li class="navicon dropdown">
+            <a href="#"><span>≡</span><img src="/images/favicon/dutertetimes.png"></a>
+            <div class="dropdown_content">
+                <a href="/news/">All News</a>
+                <hr>
+                <a href="/news/president/">President</a>
+                <a href="/news/press/">Press Events</a>
+                <a href="/news/economy/">Economy</a>
+                <a href="/news/law_and_order/">Law and Order</a>
+                <a href="/news/agrarian/">Agrarian</a>
+                <a href="/news/environment/">Environment</a>
+                <a href="/news/foreign_affairs/">Foreign Affairs</a>
+                <a href="/news/peace_process/">Peace Process</a>
+                <a href="/news/other/">Other News</a>
+                <hr>
+                <a href="/story/">Stories</a>
+                <a href="/topic/">Topics</a>
+                <a href="/opinion/">Opinions</a>
+                <hr>
+                <a href="/info/">Information</a>
+                <hr>
+                <a href="/search/" accesskey="c">Search</a>
+                <hr>
+
+                {% for item in site.data.socmed %}
+                <a href="{{ item.link }}" target="{{ item.target }}" alt="{{ item.name }}"
+                   data-toggle="tooltip"
+                   data-placement="top"
+                   title="{{ item.message }}">
+                    <i class="{{ item.fa_icon }}" aria-hidden="true"></i>&nbsp;{{ item.name }}
+                </a>
+                {% endfor %}
+
+            </div>
+        </li>
+
+        <li class="title">
+            <a accesskey="h" href="/">{{ site.title }}</a>
+        </li>
+
+        {% if site.debug %}
+        <li class="dropdown right">
+            <a href="/info/" class="dropdown_link">Info&nbsp;&nbsp;<i class="fa fa-angle-down fa-lg" aria-hidden="true"></i></a>
+            <div class="dropdown_content dropdown_content_right">
+                <a href="/info/law/">Laws</a>
+                <a href="/info/person/">People</a>
+                <a href="/info/place/">Places</a>
+                <a href="/info/org/">Organizations</a>
+                <a href="/info/company/">Companies</a>
+                <a href="/info/doc">Papers and Documents</a>
+                <a href="/info/source/">Info and News Sources</a>
+            </div>
+        </li>
+        {% endif %}
+    </ul>
+
+    {% unless page.title == "Search" %}
+    <div id="search">
+        <form role="search" method="get" action="{{site.baseurl}}/search/">
+            <input accesskey="s" type="text" name="q" id="search_input" autocomplete="off" title="Search string containing space must be enclosed in single or double quotes." required>
+        </form>
+    </div>
+    {% endunless %}
+
+    {% comment %}
+    <ul>
+        {% include links_social_media.html %}
+    </ul>
+    {% endcomment %}
+</div>
