--- a/_sass/layout_post.scss
+++ b/_sass/layout_post.scss
@@ -427,6 +427,10 @@ section.post_column_main {
     table {
         width: auto;
         overflow: scroll;
+        thead tr {
+            white-space: nowrap;
+            word-wrap: nowrap;
+        }
         tbody tr {
             td,
             td p,
