Update related links display in post display

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -51,7 +51,11 @@ layout: default
         {% for link in page.related %}
             {% for post in site.posts %}
                 {% if post.permalink == link %}
-            <p><a href="{{ link }}">{{ post.title }}</a>&nbsp;&ndash;&nbsp;<span class="date">{{ post.date | date: site.data.format.date_only_long_month }}</p></li>
+                    {% if post.categories[0] == "info" %}
+                    <p><a href="{{ link }}">{{ post.title }}</a></p>
+                    {% else if post.categories[0] == "news" %}
+                    <p><a href="{{ link }}">{{ post.title }}</a>&nbsp;&ndash;&nbsp;<span class="date">{{ post.date | date: site.data.format.short_date }}</p>
+                    {% endif %}
                 {% endif %}
             {% endfor %}
         {% endfor %}
