--- a/_includes/youtube_video.html
+++ b/_includes/youtube_video.html
@@ -10,7 +10,7 @@ Example:
 <div class="video_container">
     <p class="video_link"><span>Link to video:</span><br/><a href="https://www.youtube.com/watch?v={{ include.video_id }}">https://www.youtube.com/watch?v={{ include.video_id }}</a></p>
     <div class="video">
-        <iframe src="https://www.youtube.com/embed/{{ include.video_id }}" frameborder="0"></iframe>
+        <iframe src="https://www.youtube.com/embed/{{ include.video_id }}" frameborder="0" allowfullscreen="allowfullscreen" mozallowfullscreen="mozallowfullscreen" msallowfullscreen="msallowfullscreen" oallowfullscreen="oallowfullscreen" webkitallowfullscreen="webkitallowfullscreen"></iframe>
     </div>
     <p class="attribution">video by {{ include.attribution }}&nbsp;</p>
 </div>
